# gdelt-stable

./: .gitignore  README.md  pyproject.toml
src/gdelt-stable/: __init__.py  eventv1.py  eventv2.py  gdelt.py  gkgv1.py
