[project]
name = "gdelt_stable"
version = "0.0.1"
authors = [
    { name="Dolan Lavoie" },
    { name="Evan Bullwinkle"},
]
description = "Python package to do GDELT stuff"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
]
license = "GNU GPLv3"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/dolanlavoie1/gdelt-stable"
